Fix pharos-site sidenav on mobile screens (#782)
* feat(site): toggle sidenav on mobile sizes

When Pharos v14 was release the default behavior of the sidenav changed
and broke the site navigation

* fix(site): add a check before using the window object for Gatsby SSR

--- a/packages/pharos-site/src/components/variables.module.css
+++ b/packages/pharos-site/src/components/variables.module.css
@@ -16,3 +16,9 @@
   --sidebar-spacing-padding: var(--pharos-spacing-one-and-a-half-x);
   --main-spacing-padding: var(--pharos-spacing-7-x);
 }
+
+@media screen and (width <= 1055px) {
+  :root {
+    --main-spacing-padding: var(--pharos-spacing-2-x);
+  }
+}
